test/e2e/features/basicauth/testdata/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-public
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "public.example.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "secure.example.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080

    - backendRefs:
        - name: simple-svc
          port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /secrets
      filters:
      - type: ExtensionRef
        extensionRef:
          name: route-secret-basicauth
          group: gateway.kgateway.dev
          kind: TrafficPolicy
